# generate-dev-update

./: .woodpecker.yml  Cargo.toml  README.md  renovate.json  run.sh
src/: lib.rs  main.rs
