[package]
name = "generate-dev-update"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
itertools = "0.14.0"
octocrab = "0.51.0"
reqwest = { version = "0.13.4", default-features = false, features = [
  "rustls",
  "json",
] }
rustls = { version = "0.23.40", default-features = false }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
